[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

[dependencies]
regex = "1.11.1"


[[bin]]
name = "day_one"
path = "src/day_one.rs"

[[bin]]
name = "day_two"
path = "src/day_two.rs"

[[bin]]
name = "day_three"
path = "src/day_three.rs"


[[bin]]
name = "day_four"
path = "src/day_four.rs"

[[bin]]
name = "day_five"
path = "src/day_five.rs"
